2008-04-23  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/JFreeChart.java:
    Added new contributor Diego Pierangeli,
    * source/org/jfree/chart/urls/CustomCategoryURLGenerator.java:
    New class,
    * source/org/jfree/chart/urls/CustomXYURLGenerator.java
    (addURLSeries): Copy the incoming list.

2008-04-22  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/VectorRenderer.java,
    * source/org/jfree/chart/renderer/xy/XYBlockRenderer.java:
    Implemented PublicCloneable.

2008-04-22  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/xy/DefaultHighLowDataset.java,
    * source/org/jfree/data/xy/DefaultIntervalXYDataset.java,
    * source/org/jfree/data/xy/DefaultWindDataset.java,
    * source/org/jfree/data/xy/DefaultXYZDataset.java,
    * source/org/jfree/data/xy/MatrixSeriesCollection.java,
    * source/org/jfree/data/xy/VectorSeriesCollection.java,
    * source/org/jfree/data/xy/XIntervalSeriesCollection.java,
    * source/org/jfree/data/xy/XYBarDataset.java,
    * source/org/jfree/data/xy/XYIntervalSeriesCollection.java,
    * source/org/jfree/data/xy/XYSeriesCollection.java,
    * source/org/jfree/data/xy/YIntervalSeriesCollection.java:
    Implemented PublicCloneable.

2008-04-22  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/xy/DefaultTableXYDataset.java:
    Implemented PublicCloneable, plus
    (clone): New method override.

2008-04-22  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/xy/DefaultOHLCDataset.java:
    Implemented PublicCloneable, plus
    (clone): New method override.

2008-04-22  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/xy/CategoryTableXYDataset.java: 
    Implemented PublicCloneable, plus
    (clone): New method override.

2008-04-21  David Gilbert  <david.gilbert@object-refinery.com>
